# godot_ecs_project

./: .gitignore  README.md
godot/: camera.gd  project.godot
godot/aban/lib/: game.gdns  game.tres
godot/aban/main/: main.gd  main.tscn
godot/assets/: cube.glb  cube.obj.import
rust/: .gitignore  Cargo.toml  build.ps1
rust/src/: lib.rs
