[package]
name = "godot_ecs_project"
version = "0.1.0"
authors = ["Sarvarian <30783095+Sarvarian@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
legion = "0.4.0"
euclid = "0.22.2"